--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,9 @@
-FROM node:latest-alpine
+FROM node:latest
 WORKDIR /app
 COPY ./package*.json ./
+RUN apt-get update && \
+    apt-get install -y python3
+
 RUN npm install
 COPY . .
 EXPOSE 3000
